# attestation-service

./: Cargo.toml
as-types/: Cargo.toml
attestation-service/: Cargo.toml
attestation-service/src/: lib.rs
attestation-service/src/verifier/az_snp_vtpm/: mod.rs
attestation-service/src/verifier/tdx/: mod.rs  quote.rs
src/verifier/: mod.rs
src/verifier/sev_snp_vtpm/: mod.rs
